Fixed impossible projects build under Eclipse.

--- a/demo/project.properties
+++ b/demo/project.properties
@@ -10,7 +10,7 @@
 # Project target.
 target=android-18
 android.library=false
-android.library.reference.1=../holoeverywhere
-android.library.reference.2=../addons/preferences
-android.library.reference.3=../addons/slider
+android.library.reference.1=../addons/preferences
+android.library.reference.2=../addons/slider
+android.library.reference.3=../library
 proguard.config=${sdk.dir}/tools/proguard/proguard-android-optimize.txt:../proguard-holoeverywhere.txt
